# fastgtfs

./: .gitignore  1.bootstrap.js  436.bootstrap.js  492.bootstrap.js  Cargo.toml  README.md  bootstrap.js  bundle.js.LICENSE.txt  index.html  index.js
.github/workflows/: Dockerfile  release_actv_data.yml  rust.yml
benches/: parsing_benchmark.rs
fastgtfs-js/: Cargo.toml  README.md
fastgtfs-js/src/: lib.rs  realtime_position.rs
fastgtfs-js/tests/: web.rs
fastgtfs-js/www/: .babelrc  .prettierrc.js  README.md  index.html  index.js  index.ts  map_utils.ts  package-lock.json  package.json  public_network_simulator.ts  tsconfig.json  webpack.config.js
fastgtfs-js/www/src/: App.tsx  bootstrap.ts  index.ts  index.tsx  main_screen.tsx  map.tsx  map_utils.ts  navigator.tsx  public_network_simulator.ts  simulation.tsx
fastgtfs-js/www/src/utils/: map_utils.ts  navigation_utils.ts  public_network_simulator.ts  time_utils.ts  trip_in_map_handler.ts
src/: gtfs_data.rs  lib.rs  main.rs  models.rs  navigator.rs  navigator_models.rs  parser.rs  raw_models.rs  raw_parser.rs  realtime_position.rs  test_utils.rs  timetable.rs  wasm_aware_rayon_iterators.rs
test_data/: do_release.sh  download_test_data.sh  stop_distances_by_walk.txt
tests/: general.rs  navigator.rs  parsing.rs  realtime_position.rs  timetable.rs
walk_distance_calculator/: Cargo.toml  README.md
walk_distance_calculator/src/: here_client.rs  main.rs  partial_save.rs
