[package]
name = "fastgtfs"
version = "0.1.0"
authors = ["nicomazz <nicomazz97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
geo = "0.14.1"
itertools = "0.9.0"
rayon = "1.1"
log = "0.4"
csv = "1.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
flexbuffers = "0.1.1"
chrono = { version = "0.4", features = ["serde"] }
cached = "0.18.0"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.7.1"
rand = "0.8.0"

[[bench]]
name = "parsing_benchmark"
harness = false


[profile.release]
lto = true

[lib]
bench = false
name = "fastgtfs"
crate-type = ["cdylib", "rlib"]